# watchgen

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFESTO.md  README.md  main.py  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat  package-lock.json  package.json  philosophy.rst  references.bib  requirements.txt
engines/: Cargo.toml
engines/psmc/: Cargo.toml
engines/psmc/src/: coalescent.rs  decode.rs  discretize.rs  em.rs  error.rs  hmm.rs  inference.rs  lib.rs  main.rs  nelder_mead.rs  pattern.rs  psmcfa.rs
engines/smcpp/: Cargo.toml
engines/smcpp/src/: hmm.rs  inference.rs  lib.rs  main.rs  ode.rs  rates.rs
figures/: fig_demo_argweaver.py  fig_demo_clues.py  fig_demo_dadi.py  fig_demo_discoal.py  fig_demo_gamma_smc.py  fig_demo_lshmm.py  fig_demo_moments.py  fig_demo_momi2.py  fig_demo_msprime.py  fig_demo_phlash.py  fig_demo_psmc.py  fig_demo_relate.py  fig_demo_singer.py  fig_demo_slim.py  fig_demo_smcpp.py  fig_demo_threads.py  fig_demo_tsdate.py  fig_demo_tsinfer.py  fig_mini_argweaver.py  fig_mini_clues.py  fig_mini_dadi.py  fig_mini_discoal.py  fig_mini_gamma_smc.py  fig_mini_lshmm.py  fig_mini_moments.py  fig_mini_momi2.py  fig_mini_msprime.py  fig_mini_phlash.py  fig_mini_psmc.py  fig_mini_relate.py  fig_mini_singer.py  fig_mini_slim.py  fig_mini_smcpp.py  fig_mini_threads.py  fig_mini_tsdate.py  fig_mini_tsinfer.py
scripts/: build_pdf.py  build_pdf.sh  make_cover.py  verify_dois.py
tests/: test_mini_argweaver.py  test_mini_clues.py  test_mini_dadi.py  test_mini_discoal.py  test_mini_gamma_smc.py  test_mini_lshmm.py  test_mini_momi2.py  (+40 more)
(+597 files in other folders)
