[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchgen"
version = "0.0.1"
description = "Mini implementations of population genetics algorithms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "msprime>=1.4.0",
    "scipy>=1.17.1",
    "tskit>=1.0.1",
]
