[package]
name = "smcpp-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smcpp-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
